# rock-paper-scissors-hs

./: .gitignore  GameModes.hs  LICENSE  Modes.hs  Printer.hs  README.md  Reactions.hs  RpsElem.hs  RpsElement.hs  RpsElements.hs  ScoreBoard.hs  Weapons.hs  rock-paper-scissors-hs.cabal  rps  rps.hs  weapons.hs
app/: Main.hs
src/: GameModes.hs  Printer.hs  RPS.hs  Reactions.hs  RpsElements.hs  ScoreBoard.hs  Weapons.hs
test/: GameModesSpec.hs  ReactionsSpec.hs  ScoreBoardSpec.hs  Spec.hs  WeaponsSpec.hs
