name:                rock-paper-scissors-hs
version:             0.1.0.0
synopsis:            Rock-Paper-Scissors in Haskell
description:         Please see README.md
homepage:            http://github.com/joelchelliah/rock-paper-scissors-hs#README
license:             BSD3
license-file:        LICENSE
author:              Joel Chelliah
maintainer:          joelchelliah@gmail.com
copyright:           2016 Joel Chelliah
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RPS, GameModes, Printer, Reactions, RpsElements, ScoreBoard, Weapons
  build-depends:       base, random >=1.1 && <1.2, syb
  default-language:    Haskell2010

executable rps
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, rock-paper-scissors-hs
  default-language:    Haskell2010

test-suite rps-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:     GameModesSpec, ScoreBoardSpec, WeaponsSpec
  main-is:             Spec.hs
  build-depends:       base, rock-paper-scissors-hs, QuickCheck, hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joelchelliah/rock-paper-scissors-hs
