name: rock-paper-scissors-hs
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2016 Joel Chelliah
maintainer: joelchelliah@gmail.com
homepage: http://github.com/joelchelliah/rock-paper-scissors-hs#README
synopsis: Rock-Paper-Scissors in Haskell
description:
    Please see README.md
category: Game
author: Joel Chelliah

source-repository head
    type: git
    location: https://github.com/joelchelliah/rock-paper-scissors-hs

library
    exposed-modules:
        RPS
        GameModes
        Printer
        Reactions
        RpsElements
        ScoreBoard
        Weapons
    build-depends:
        base -any,
        random >=1.1 && <1.2,
        syb -any
    default-language: Haskell2010
    hs-source-dirs: src

executable rps
    main-is: Main.hs
    build-depends:
        base -any,
        rock-paper-scissors-hs -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite rps-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        rock-paper-scissors-hs -any,
        QuickCheck -any,
        hspec -any
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        GameModesSpec
        ReactionsSpec
        ScoreBoardSpec
        WeaponsSpec
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
